--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,11 @@
     <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.min.css">
     <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
 
+    <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+    <script src="http://underscorejs.org/underscore-min.js"></script>
+
+    <script src="lib/angular-google-maps/angular-google-maps.min.js"></script>
+
     <!-- endbower -->
     <!-- endbuild -->
 
